--- a/app/views/project_features/destroy.turbo_stream.erb
+++ b/app/views/project_features/destroy.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.update @project_feature, @project_feature %>
+<%= turbo_stream.remove @project_feature %>
 
 <%= turbo_stream.update "summary" do %>
   <p>
