--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @report do |f| %>
+<%= form_for @report, remote: local_assigns[:remote] do |f| %>
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="report_date"><%= t ".day_month_year" %></label>
