--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,3 +1,3 @@
 <% flash.each do |message_type, message| %>
-  <div class="flash alert alert-<%= message_type %> min-w-50"><%= message %></div>
+  <div class="flash alert alert-<%= message_type %> min-w-50 z-2"><%= message %></div>
 <% end %>
