--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -36,6 +36,14 @@
             <%= link_to t(".list_release_plans"), release_plans_path, class: "nav-link" %>
           </div>
         </li>
+
+        <li class="nav-item offset-1">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-coin text-white me-1"></i>
+            <%= link_to t(".list_values"), project_features_path, class: "nav-link" %>
+          </div>
+        </li>
+
       </ul>
     </div>
   </nav>
