--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 1;
   padding: 2em;
-
+  width: 50%;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -39,7 +39,7 @@
   appearance: none;
   background-color: whitesmoke;
   background-clip: padding-box;
-  border: 1px solid rgb(128, 128, 128);
+  border: 1px solid var(--bs-gray-300);
   border-radius: 0.25rem;
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
