--- a/app/views/release_plans/_release_plan_detail.html.erb
+++ b/app/views/release_plans/_release_plan_detail.html.erb
@@ -28,7 +28,7 @@
                 </tr>
                 <tr>
                   <td><%= t ".status" %></td>
-                  <td><%= @release_plan.is_released %></td>
+                  <td><%= t "release_plans.is_released.#{@release_plan.is_released}" %></td>
                 </tr>
               </tbody>
             </table>
