--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -30,20 +30,19 @@
           </div>
         </li>
 
-        <li class="nav-item offset-1">
+        <li class="nav-item offset-1 mb-2">
           <div class="d-flex align-items-center">
             <i class="bi bi-calendar text-white me-1"></i>
             <%= link_to t(".list_release_plans"), release_plans_path, class: "nav-link" %>
           </div>
         </li>
 
-        <li class="nav-item offset-1">
+        <li class="nav-item offset-1 mb-2">
           <div class="d-flex align-items-center">
             <i class="bi bi-coin text-white me-1"></i>
             <%= link_to t(".list_values"), project_features_path, class: "nav-link" %>
           </div>
         </li>
-
       </ul>
     </div>
   </nav>
