--- a/app/views/project_features/new.html.erb
+++ b/app/views/project_features/new.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @project, url: project_features_path do |f| %>
   <div class="mb-3">
     <%= f.label :month_year, t(".month"), class: "form-label" %>
-    <%= f.text_field :month_year, placeholder: "YYYY-MM", class: "form-control #{invalid(f.object, :month_year)}" %>
+    <%= f.date_field :month_year, type: "month", class: "form-control #{invalid(f.object, :month_year)}", required: true %>
     <p class="error"><%= show_errors(f.object, :month_year) %></p>
   </div>
   <div class="mb-3">
     <%= f.label :project_id, t(".project_name"), class: "form-label" %>
-    <%= f.select :project_id, project_select, {:prompt => t(".select_project")}, class: "form-select #{invalid(f.object, :project_id)}" %>
+    <%= f.select :project_id, project_select, {:prompt => t(".select_project")}, class: "form-select #{invalid(f.object, :project_id)}", required: true %>
     <p class="error"><%= show_errors(f.object, :project_id) %></p>
   </div>
   <div class="mb-3">
