--- a/app/views/projects/_project_member.html.erb
+++ b/app/views/projects/_project_member.html.erb
@@ -1,4 +1,3 @@
-<%== pagy_bootstrap_nav @pagy if @pagy&.pages > 1 %>
 <div class="table-wrapper w-100">
   <div class="table-title">
     <div class="row">
@@ -27,4 +26,12 @@
     </tbody>
   </table>
 </div>
-<%== pagy_bootstrap_nav @pagy if @pagy&.pages > 1 %>
+<div class="card-footer">
+  <div class="d-flex justify-content-between align-items-center">
+    <!-- Pagination -->
+    <% if @pagy&.pages > 1 %>
+      <%== pagy_info @pagy %>
+      <%== pagy_bootstrap_nav @pagy %>
+    <% end %>
+  </div>
+</div>
