--- a/app/views/projects/_search_form.html.erb
+++ b/app/views/projects/_search_form.html.erb
@@ -1,23 +1,29 @@
 <%= form_with url: projects_path, method: :get, class: "row g-4 pb-4" do |f| %>
   <div class="col-auto">
-    <%= f.label :name,  t(".name") %>
-    <%= f.text_field :name, value: params[:name] %>
+    <%= f.label :name,  t(".name"), class: "form-label" %>
+    <%= f.text_field :name, value: params[:name], class: "form-control" %>
   </div>
   <div class="col-auto">
-    <%= f.label :group, t(".group") %>
-    <%= f.select :group, list_group, {include_blank: true, selected: params[:group_id]} %>
+    <%= f.label :group, t(".group"), class: "form-label" %>
+    <%= f.select :group, list_group, {include_blank: true, selected: params[:group]}, class: "form-select" %>
   </div>
   <div class="col-auto">
-    <%= f.label :status, t(".status") %>
-    <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]} %>
+    <%= f.label :status, t(".status"), class: "form-label" %>
+    <%= f.select :status, list_statuses, {include_blank: true, selected: params[:status]}, class: "form-select" %>
   </div>
   <div class="col-auto">
-    <%= f.submit t(".search"), name: nil, class: "btn btn-primary me-2" %>
-    <%= link_to projects_path, class: "btn btn-secondary" do %>
+    <label class="form-label invisible">invisible label</label>
+    <%= f.submit t(".search"), name: nil, class: "btn btn-primary form-control" %>
+  </div>
+  <div class="col-auto">
+    <label class="form-label invisible">invisible label</label>
+    <%= link_to projects_path, class: "btn btn-secondary form-control" do %>
       <i class="bi bi-arrow-counterclockwise"></i>
     <% end %>
   </div>
+
   <div class="col-auto ms-auto">
-    <%= link_to t(".new_project"), new_project_path, class: "btn btn-primary" %>
+    <label class="form-label invisible">invisible label</label>
+    <%= link_to t(".new_project"), new_project_path, class: "btn btn-primary form-control" %>
   </div>
 <% end %>
