--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,6 @@
 <%= render "search_form" %>
-<%= link_to t(".new_project"), new_project_path, class: "btn btn-primary mb-2" %>
 <div class="table-responsive">
-  <table class="table table-striped table-hover table-bordered padding-margin-0">
+  <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
     <thead>
       <tr>
         <th scope="col"><%= t ".group" %></th>
@@ -17,6 +16,13 @@
       <%= render @projects %>
     </tbody>
   </table>
-  <%== pagy_info @pagy %>
-  <%== pagy_bootstrap_nav @pagy %>
+  <div class="card-footer">
+    <div class="d-flex justify-content-between align-items-center">
+      <!-- Pagination -->
+      <% if @pagy&.pages > 1 %>
+        <%== pagy_info @pagy %>
+        <%== pagy_bootstrap_nav @pagy %>
+      <% end %>
+    </div>
+  </div>
 </div>
