--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,14 +1,14 @@
 <%= form_for @report, remote: local_assigns[:remote] do |f| %>
   <div class="form-row">
     <div class="form-group col-md-4">
-      <label for="report_date"><%= t ".day_month_year" %></label>
+      <label for="report_date" class="form-label"><%= t ".day_month_year" %></label>
       <%= f.date_field :date, value: date_field_value(@report.date),
                        class: "form-control #{invalid @report, :date}" %>
       <p class="error"><%= show_errors @report, :date %></p>
     </div>
 
     <div class="form-group col-md-4 ml-35">
-      <label for="report_project_id"><%= t ".choose_project" %></label>
+      <label for="report_project_id" class="form-label"><%= t ".choose_project" %></label>
       <%= f.collection_select :project_id, @projects, :id, :name, {},
                               {class: "form-control #{invalid @report, :project_id}"} %>
       <p class="error"><%= show_errors @report, :project_id %></p>
@@ -16,7 +16,7 @@
   </div>
 
   <div class="form-group">
-    <label for="report_description"><%= t ".job_description" %></label>
+    <label for="report_description" class="form-label"><%= t ".job_description" %></label>
     <%= f.text_area :description,
                     class: "form-control #{invalid @report, :description}",
                     rows: "3" %>
@@ -24,7 +24,7 @@
   </div>
 
   <div class="form-group">
-    <label for="report_resource_description"><%= t ".resource_description" %></label>
+    <label for="report_resource_description" class="form-label"><%= t ".resource_description" %></label>
     <%= f.text_area :resource_description,
                     class: "form-control #{invalid @report, :resource_description}",
                     rows: "3" %>
@@ -32,14 +32,14 @@
   </div>
 
   <div class="form-group">
-    <label for="report_issue"><%= t ".issue" %></label>
+    <label for="report_issue" class="form-label"><%= t ".issue" %></label>
     <%= f.text_area :issue,
                     class: "form-control #{invalid @report, :issue}",
                     rows: "2" %>
     <p class="error"><%= show_errors @report, :issue %></p>
   </div>
 
-  <div class="d-flex justify-content-end">
-    <%= f.submit t(".save"), class: "btn btn-primary btn-block w-30" %>
+  <div class="d-flex justify-content-center">
+    <%= f.submit t(".save"), class: "btn btn-primary btn-block w-30 form-control" %>
   </div>
 <% end %>
