--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "search_form" %>
 <div class="table-responsive">
-  <table class="table table-striped table-hover table-bordered padding-margin-0">
+  <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
     <thead>
       <tr>
         <th width="5%"><%= t ".stt" %></th>
@@ -15,6 +15,13 @@
       <%= render @reports %>
     </tbody>
   </table>
-  <%== pagy_info @pagy %>
-  <%== pagy_bootstrap_nav @pagy %>
+  <div class="card-footer">
+    <div class="d-flex justify-content-between align-items-center">
+      <!-- Pagination -->
+      <% if @pagy&.pages > 1 %>
+        <%== pagy_info @pagy %>
+        <%== pagy_bootstrap_nav @pagy %>
+      <% end %>
+    </div>
+  </div>
 </div>
