--- a/app/views/resources/_project.html.erb
+++ b/app/views/resources/_project.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><%= project.id %></td>
-  <td><span class="fw-bold"><%= project.name %></span></td>
+  <td><span><%= project.name %></span></td>
   <td><%= number_with_precision(project.sum_man_month, precision: 2) %></td>
   <td><%= link_to t(".detail"), resource_path(project) %></td>
   <td><%= format_date project.start_date %></td>
