--- a/app/views/resources/_search.html.erb
+++ b/app/views/resources/_search.html.erb
@@ -1,24 +1,30 @@
 <%= form_with url: resources_path, method: :get do |f| %>
-  <%= f.label t("resources.index.search") , class: "form-label h6"%>
-
   <div class="row mb-3">
-    <div class="col-lg-2">
-      <%= f.date_field :date, value: params[:date], placeholder: "MM/DD/YYYY", class: "form-control bg-light-green border-light-green"%>
-    </div>
-
-    <div class="col-lg-3">
-      <%= f.text_field :name, value: params[:name], placeholder: t("resources.index.search_by_name"), class: "form-control bg-light-green border-light-green"%>
+    <div class="col-auto">
+      <%= f.label :date,  t("resources.index.date_resource"), class: "form-label" %>
+      <%= f.date_field :date, value: params[:date], class: "form-control"%>
     </div>
 
     <div class="col-auto">
-      <%= f.submit t("resources.index.search"), name: nil, class: "btn btn-primary me-2 " %>
-      <%= link_to resources_path, class: "btn btn-secondary" do %>
+      <%= f.label :name,  t("resources.index.name"), class: "form-label" %>
+      <%= f.text_field :name, value: params[:name], placeholder: t("resources.index.search_by_name"), class: "form-control"%>
+    </div>
+
+    <div class="col-auto">
+      <label class="form-label invisible">invisible label</label>
+      <%= f.submit t("resources.index.search"), name: nil, class: "btn btn-primary form-control" %>
+    </div>
+
+    <div class="col-auto">
+      <label class="form-label invisible">invisible label</label>
+      <%= link_to resources_path, class: "btn btn-secondary form-control" do %>
         <i class="bi bi-arrow-counterclockwise"></i>
       <% end %>
     </div>
 
     <div class="col-auto ms-auto">
-      <%= link_to t("resources.index.new_resource"), new_resource_path, class: "btn btn-primary" %>
+      <label class="form-label invisible">invisible label</label>
+      <%= link_to t("resources.index.new_resource"), new_resource_path, class: "btn btn-primary form-control" %>
     </div>
   </div>
 <% end %>
