--- a/app/views/resources/_project.html.erb
+++ b/app/views/resources/_project.html.erb
@@ -8,9 +8,9 @@
     <button type="button" class="btn btn-primary btn-sm">
       <i class="bi-eye-fill"></i>
     </button>
-    <button type="button" class="btn btn-success btn-sm">
+    <%= link_to edit_resource_path(project), class: "btn btn-success btn-sm" do %>
       <i class="bi-pencil-square"></i>
-    </button>
+    <% end %>
     <button type="button" class="btn btn-danger btn-sm">
       <i class="bi-trash-fill"></i>
     </button>
