fix: edit project and add member index

--- a/app/views/project_features/_monthly_project_feature.html.erb
+++ b/app/views/project_features/_monthly_project_feature.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <th scope="row" class="w-auto"><%= project_feature_stt item_counter  %></th>
+  <td><%= project_feature_stt item_counter  %></td>
   <td><%= item.name %></td>
   <td><%= item.calculate_project_man_per_month(params[:month_year]) %></td>
 
