--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,5 @@
 <tr>
+  <td><%= project_stt project_counter %></td>
   <td><%= project.group_name %></td>
   <td><%= project.name %></td>
   <td><%= project.description %></td>
