--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,6 +3,7 @@
   <table class="table table-striped align-middle table-hover table-bordered padding-margin-0">
     <thead>
       <tr>
+        <th scope="col" width="5%"><%= t ".stt" %></th>
         <th scope="col"><%= t ".group" %></th>
         <th scope="col"><%= t ".name" %></th>
         <th scope="col"><%= t ".description" %></th>
