--- a/app/views/resources/_search.html.erb
+++ b/app/views/resources/_search.html.erb
@@ -24,7 +24,7 @@
 
     <div class="col-auto ms-auto">
       <label class="form-label invisible">invisible label</label>
-      <%= link_to t("resources.index.new_resource"), new_resource_path, class: "btn btn-primary form-control" %>
+      <%= link_to t("resources.index.update_resource"), new_resource_path, class: "btn btn-primary form-control" %>
     </div>
   </div>
 <% end %>
