--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,5 @@
 <% provide :title, t("project.new_project") %>
+<h1 class="d-flex fw-bold justify-content-center mb-8"><%= t("project.created_project")%></h1>
 <% content_for :button_text do %>
   <% t "project.form.submit" %>
 <% end %>
