--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t(".title") %>
-<div class="container ">
-  <h1 class="fw-bold pb-10 text-center"><%= t ".title" %></h1>
+<div class="col-6 mx-auto">
+  <h1 class="fw-bold text-center mb-8"><%= t ".title" %></h1>
   <div class="m-auto">
     <%= render "form" %>
   </div>
