--- a/app/views/resources/_resources_form.html.erb
+++ b/app/views/resources/_resources_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <% @list_resources.try(:each) do |item| %>
-    <div class="mb-3 row">
-      <div class="col-5">
+    <div class="mb-3 row justify-content-center">
+      <div class="col-4">
         <%= item.user_name %>
       </div>
       <div class="col-4">
