--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -46,11 +46,10 @@
 
         <li class="nav-item offset-1 mb-2">
           <div class="d-flex align-items-center">
-            <i class="bi bi-bar-chart-fill text-white me-1"></i>
-            <%= link_to t(".statistic"), value_resources_path, class: "nav-link" %>
+            <i class="bi bi-bar-chart text-white me-1"></i>
+            <%= link_to t(".list_value_resources"), value_resources_path, class: "nav-link" %>
           </div>
         </li>
-
       </ul>
     </div>
   </nav>
