--- a/app/views/projects/_project_member.html.erb
+++ b/app/views/projects/_project_member.html.erb
@@ -12,7 +12,7 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th width="5%"><%= t ".No" %></th>
+        <th width="5%"><%= t ".stt" %></th>
         <th><%= t ".Member_name" %></th>
         <th><%= t ".Role" %></th>
         <th><%= t ".Github_Account" %></th>
