--- a/app/views/resources/_project_user_resource_fields.html.erb
+++ b/app/views/resources/_project_user_resource_fields.html.erb
@@ -1,13 +1,15 @@
 <div class="nested-fields">
   <%= f.hidden_field :month, value: @month %>
   <%= f.hidden_field :year, value: @year %>
-  <div class="mb-3 row">
-    <div class="col-5">
+  <div class="mb-3 row justify-content-center">
+    <div class="col-4 me-10">
       <%= f.select :project_user_id, list_project_user(@project.id) , { prompt: t(".select_member") }, class: "form-select", required: true  %>
     </div>
     <div class="col-4">
       <%= f.number_field :percentage , class: "form-control", placeholder: t(".effort"),max: Settings.number.value_100, min: Settings.number.value_0, required: true %>
     </div>
   </div>
-  <%= link_to_remove_association t(".remove"), f %>
+  <div class="ms-10">
+    <%= link_to_remove_association t(".remove"), f %>
+  </div>
 </div>
