--- a/app/views/project_features/index.html.erb
+++ b/app/views/project_features/index.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, t("month_project_features.index.project_feature_index") %>
 <%= form_with url: project_features_path, method: :get do |f| %>
   <div class="row mb-4">
     <div class="col-auto">
