--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= project_stt project_counter %></td>
+  <td><%= sequence_number project_counter, @pagy&.offset %></td>
   <td><%= project.group_name %></td>
   <td><%= project.name %></td>
   <td><%= project.description %></td>
