--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t("new_project") %>
+<% provide :title, t("project.new_project") %>
 <% content_for :button_text do %>
   <% t "project.form.submit" %>
 <% end %>
