--- a/app/views/value_resources/index.html.erb
+++ b/app/views/value_resources/index.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, t(".value_resources_index") %>
 <%= render "value_resources/search" %>
 <div class="card-footer">
   <% if @pagy.pages > 1 %>
