--- a/app/views/month_project_features/index.html.erb
+++ b/app/views/month_project_features/index.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, t(".project_feature_index") %>
 <div class="container">
   <h1 class="text-center mb-8"><%= t ".list_value" %></h1>
   <div class="form-group justify-content-center">
