--- a/app/views/project_users/_project_user.html.erb
+++ b/app/views/project_users/_project_user.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= project_member_stt project_user_counter %></td>
+  <td><%= sequence_number project_user_counter, @pagy&.offset %></td>
   <td><%= project_user.user_name %></td>
   <td><%= project_user.project_role_name %></td>
   <td><%= project_user.user_git_account %></td>
