--- a/app/views/release_plans/_release_plan.html.erb
+++ b/app/views/release_plans/_release_plan.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= release_plan_stt release_plan_counter %></td>
+  <td><%= sequence_number release_plan_counter, @pagy.offset %></td>
   <td><%= release_plan.project_name %></td>
   <td><%= format_date release_plan.release_date %></td>
   <td class="text-nowrap text-overflow"><%= release_plan.description %></td>
