--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -43,6 +43,14 @@
             <%= link_to t(".list_values"), project_features_path, class: "nav-link" %>
           </div>
         </li>
+
+        <li class="nav-item offset-1 mb-2">
+          <div class="d-flex align-items-center">
+            <i class="bi bi-bar-chart-fill text-white me-1"></i>
+            <%= link_to t(".statistic"), value_resources_path, class: "nav-link" %>
+          </div>
+        </li>
+
       </ul>
     </div>
   </nav>
