--- a/app/views/project_users/create.turbo_stream.erb
+++ b/app/views/project_users/create.turbo_stream.erb
@@ -4,5 +4,5 @@
 <% end %>
 
 <%= turbo_stream.update "project_members" do %>
-  <%= render @project_members %>
+  <%= render @project_users %>
 <% end %>
