Task: fix list resources

--- a/app/views/resources/_project.html.erb
+++ b/app/views/resources/_project.html.erb
@@ -2,6 +2,6 @@
   <td><%= project.id %></td>
   <td><span><%= project.name %></span></td>
   <td><%= number_with_precision(project.sum_man_month, precision: 2) %></td>
-  <td><%= link_to t(".detail"), resource_path(project) %></td>
+  <td><%= link_to t("resources.table.detail"), resource_path(project) %></td>
   <td><%= format_date project.start_date %></td>
 </tr>
