--- a/app/views/resources/_search.html.erb
+++ b/app/views/resources/_search.html.erb
@@ -2,7 +2,7 @@
   <div class="row mb-3">
     <div class="col-auto">
       <%= f.label :date,  t("resources.index.date_resource"), class: "form-label" %>
-      <%= f.date_field :date, value: params[:date], class: "form-control"%>
+      <%= f.month_field :date, value: params[:date], class: "form-control"%>
     </div>
 
     <div class="col-auto">
